# autofarm

./: .gitignore  README.md  devices.json  flake.nix  map.html  monitorTestMqtt.out  old-shell.nix  shell.nix
cns/: .gitignore  README.md  env.nix  farm-cns.nix  farm-server-configuration.nix  farm-server-hardware-configuration.nix  irrigation-control-configuration.nix  shell.nix
cns/machines/: farm-server-configuration.nix  farm-server-hardware-configuration.nix  terminal-environment.nix
db/: .gitignore  get-bin-from-postgres.hs  spatial.org
devices/esp32_base/: .gitignore  ReadMe.md  shell.nix
devices/farm_server/: irrigation-control-configuration.nix
e2e/: playwright.config.ts
erlang/: .gitignore  README.md  rebar.config  shell.nix
farm-control/: .gitignore  Main.hs  default.nix  farm-control.cabal  farm-control.nix  shell.nix
farm-control/Farm/: Config.hs
farm-haskell/: Main.hs  default.nix  farm-haskell.cabal  farm-haskell.nix
farm-logger/: Main.hs  default.nix  farm-logger.cabal  farm-logger.nix
farm-monitor/: .gitignore  Main.hs  default.nix  farm-monitor.cabal  farm-monitor.nix  shell.nix
frontend/: .gitignore  package-lock.json  package.json  shell.nix  spago-packages.nix  spago.dhall
gleam-backend/: .gitignore  README.md  gleam.toml  manifest.toml
gleam-frontend/: gleam.toml  manifest.toml
gleam-shared/: gleam.toml  manifest.toml
irrigation_controller/: Changelog.md  ReadMe.md  main.py
machines/: z230-configuration.nix  z230-hardware-configuration.nix
vendored_gramps/: CHANGELOG.md  gleam.toml  manifest.toml
(+144 files in other folders)
