name: farm-control
version: 0.0.1
license: GPL3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

executable farm-control
    build-depends: base < 5, containers, bytestring, text, time, network-uri,
      net-mqtt, aeson, optparse-generic, utf8-string
    main-is: Main.hs
    other-modules: Farm.Config
    default-language: Haskell2010
    ghc-options: -threaded
